--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 
-<marque> Wel Come to Our Website. </marque>
+<h1> Wel Come to Our Website. </h1>
 <h1>Shree Samaj Jiwan Saving and Credit Cooperative ltd. </h1>
 <h2>Shree Samaj Jiwan Saving and Credit Cooperative ltd. </h2>
 <h3>Shree Samaj Jiwan Saving and Credit Cooperative ltd. </h3>
