--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <h4>Shree Samaj Jiwan Saving and Credit Cooperative ltd. </h4>
 <h5>Shree Samaj Jiwan Saving and Credit Cooperative ltd. </h5>
 <h6>Shree Samaj Jiwan Saving and Credit Cooperative ltd. </h6>
-
-
+<marquee behavior="scroll" direction="left" scrollamount="4">
+    This is a scrolling marquee text.
+  </marquee>
 </body>
 </html>
