--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
    <h1>Shree Samaj Jiwan Saving and Credit Cooperative ltd. </h1>
   </marquee>
 
-<marquee behavior="scroll" direction="left" scrollamount="4">
+<marquee behavior="scroll" direction="right" scrollamount="4">
    <h2>Shree Samaj Jiwan Saving and Credit Cooperative ltd. </h2>
   </marquee>
    <marquee behavior="scroll" direction="left" scrollamount="4">
    <h3>Shree Samaj Jiwan Saving and Credit Cooperative ltd. </h3>
   </marquee>
-   <marquee behavior="scroll" direction="left" scrollamount="4">
+   <marquee behavior="scroll" direction="right" scrollamount="4">
    <h4>Shree Samaj Jiwan Saving and Credit Cooperative ltd. </h4>
   </marquee>
    <marquee behavior="scroll" direction="left" scrollamount="4">
    <h5>Shree Samaj Jiwan Saving and Credit Cooperative ltd. </h5>
   </marquee>
-<marquee behavior="scroll" direction="left" scrollamount="4">
+<marquee behavior="scroll" direction="right" scrollamount="4">
     This is a scrolling marquee text.
   </marquee>
 </body>
