--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 
-<h1> Wel Come to Our Website. </h1>
+<h1> Wel Come to Our Website. direction="Center" </h1>
    <marquee behavior="scroll" direction="left" scrollamount="1">
    <h1>Shree Samaj Jiwan Saving and Credit Cooperative ltd. </h1>
   </marquee>
