--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
    <title> SSJSCC </title>
 </head>
 <body>
+ <h1 class="center-heading">Wel Come to Our Website.</h1>
 
-<h1 direction="Center"> Wel Come to Our Website.  </h1>
    <marquee behavior="scroll" direction="left" scrollamount="1">
    <h1>Shree Samaj Jiwan Saving and Credit Cooperative ltd. </h1>
   </marquee>
