--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <html>
 <head>
    <title> SSJSCC </title>
+   <style>
+    body {
+      background-color: lightblue;
+      font-family: Arial, sans-serif;
+    }
+    h1 {
+      color: darkblue;
+      text-align: center;
+    }
+    p {
+      color: black;
+    }
+  </style>
 </head>
 <body>
  <h1 class="center-heading">Wel Come to Our Website.</h1>
