--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
       color: darkblue;
       text-align: center;
     }
+        h2 {
+      color: darkblue;
+      text-align: center;
+    }
+        h3 {
+      color: darkblue;
+      text-align: center;
+    }
+        h4 {
+      color: darkblue;
+      text-align: center;
+    }
+        h5 {
+      color: darkblue;
+      text-align: center;
+    }
     p {
       color: black;
     }
